refactor: change create desc param from pointer to string and add swagger and tests
